week 12 journal 3 complete

--- a/reflections/week12/03.md
+++ b/reflections/week12/03.md
@@ -1,7 +1,10 @@
 # Daily Reflection
 Have you started the client? How is you vue application shaping up. Do you have the basics of data rendering to the page.  
-
+I passed my first grading and have finished correcting all of the problems that were pointed out. 
 ## Prompts
 - How is today going? 
+Today is going great. Starting to look for a portfolio to build.
 - Are you managing your stress?
+Great no stress at all now that I passed. 
 - What has you most worried?
+Looking for jobs and doing interviews. 
