week 12 journal 4 complete

--- a/reflections/week12/04.md
+++ b/reflections/week12/04.md
@@ -1,7 +1,10 @@
 # Daily Reflection
 One day left are you going to make it? We believe in you!💖! Are you timeboxing appropriately? 
-
+Working on my Portfolio Today. Found my Template and am updating it to showcase me. 
 ## Prompts
 - How is today going? 
+Great
 - Are you managing your stress?
+Working on completing career week stuff.
 - What has you most worried?
+Snagging a job.
