--- a/reflections/week12/05.md
+++ b/reflections/week12/05.md
@@ -1,8 +1,12 @@
 # Final Reflection
 The Final Week, The Final day of Course Work. How did it go? Are you ready for career week?
-
+This week has gone great! ready to go out and get to work!
 ## Prompts
 - What went well this week?
+passed my first grading and should get my duck with my second.
 - What did you learn as a shock or surprise?
+Small world. Found out that I have know people doing software development already. 
 - What are you struggling with?
+feeling prepared enough to enter the workforce. 
 - What would you count as a victory?
+I passed this  course... that was my victory!
